################################################################################

nxTools v0.9.11 (XX-XX-2005):
  NEW: Added ::nx::sleep <ms> to nxHelper, to suspend execution for the given time.
  NEW: Request limits for individual users and groups.
  CHG: Improved configuration file parser for invite and pre.
  CHG: Removed SITE BOT command, no longer needed.
  CHG: Renamed SITE CLEANLOGS to SITE CLEAN and SITE REBUILDLOGS to SITE REBUILD.
  CHG: Split the change log and upgrading instructions into separate files.
  CHG: Switched to a busy callback, instead of the a timeout value, for failed
       SQLite transactions. This should improve the dupe checker in heavy conditions.
  CHG: Updated zlib in nxHelper to version 1.2.3.
  FIX: Corrected several errors in the readme.
  FIX: The InvalidArgs error message for request didn't work.

nxTools v0.9.10 (05-24-2005):
  NEW: Added free and drive totals to the footer of SITE DRIVES.
  NEW: Added custom string comparison functions to TclSQLite, replacing the
       user-defined Tcl functions used previously (speeds up dupe checker).
  CHG: Removed the Users.Status column from the nukes database.
  CHG: Rewrote portions of nxHelper, more efficient now.
  CHG: Sitebot specific output is shown as a Tcl list.
  FIX: Argument handling for SITE GIVE/TAKE.
  FIX: Meaningless error when nuking "new" releases (unable to open nuke record).
  FIX: SITE PRETIME and pre time checks were broken.
  FIX: The dZSbot cookies for variables(CLOSE) and variables(OPEN) were mixed up.

nxTools v0.9.9 (03-27-2005):
  NEW: SITE BOT BW to view the site's current usage.
  NEW: SITE NUKETOP [-max <limit>] [group] to view the top-nuked users.
  NEW: The SITE DB CREATE command checks database schema versions.
  CHG: All configuration files and extensions are loaded by init.itcl when the interpreter is initialized.
  CHG: Cleaned up database opening and improved error messages.
  CHG: Directory tags are safely removed, in case there are files inside.