@@ -1,37 +1,0 @@
-################################################################################
-# nxTools - Invite Configuration                                               #
-################################################################################
-# Author  : $-66(AUTHOR) #
-# Date    : $-66(TIMESTAMP) #
-# Version : $-66(VERSION) #
-################################################################################
-#
-#### Invites ###############################################
-#
-# Format : <target> <channels>
-# Example: home "#home #hangout"
-#
-# Description:
-#  - Define the invite targets and channels.
-#  - Several channels may be defined, at least one is required.
-#
-#### Rights ################################################
-#
-# Format : <target> <rights>
-# Example: friends "1M -neoxed =FRiENDS !A"
-#
-# Description:
-#  - Allows you to restrict specific targets to certain users, groups, or flags.
-#  - Use the standard ioFTPD rights parameters.
-#
-############################################################
-
-[INVITES]
-staff "#ops #staff"
-default "#home #site"
-public "#public"
-
-[RIGHTS]
-staff "1M =STAFF !A"
-default "* !A"
-public "* !A"
