@@ -46,8 +46,6 @@ set misc(MountUser)     "sitebot"
 set misc(MountFile)     "../etc/admin.vfs"
 #
 # - Enable dZSbot compatible logging, for alternative sitebot support.
-# - However, some features will not be available. The invite channels for dZSbot
-#   are pre-defined, so invite targets will not work (SITE INVITE <irc nick> [target]).
 #
 set misc(dZSbotLogging) False
 
