@@ -7,10 +7,11 @@ nxTools v0.9.11 (XX-XX-2005):
   NEW: Request limits for individual users and groups.
   CHG: Improved configuration file parser for invite and pre.
   CHG: Removed SITE BOT command, no longer needed.
+  CHG: Removed SITE EDITINV, to make room for a new invite system.
   CHG: Renamed SITE CLEANLOGS to SITE CLEAN and SITE REBUILDLOGS to SITE REBUILD.
   CHG: Split the change log and upgrading instructions into separate files.
-  CHG: Switched to a busy callback, instead of the a timeout value, for failed
-       SQLite transactions. This should improve the dupe checker in heavy conditions.
+  CHG: Switched to a busy callback, instead of the timeout value, for failed
+       SQLite transactions. This should improve the dupe checker during heavy traffic.
   CHG: Updated zlib in nxHelper to version 1.2.3.
   FIX: Corrected several errors in the readme.
   FIX: The InvalidArgs error message for request didn't work.
